<resources>
    <string name="app_name">My Application</string>
    <string name="nav_home">홈</string>
    <string name="nav_purchase">구매하기</string>
    <string name="nav_wishlist">위시리스트</string>
    <string name="nav_bag">장바구니</string>
    <string name="nav_profile">프로필</string>
    <string name="home_discover">Discover</string>
    <string name="home_date">9월 4일 목요일</string>
    <string name="home_main_image">홈 메인 이미지</string>
    <string name="home_whats_new">What’s new</string>
    <string name="home_latest_title">나이키 최신 상품</string>
    <string name="home_shoe_image">신발 이미지</string>
    <string name="bag_empty_message">장바구니가 비어 있습니다.\n제품을 추가하면 여기에 표시 됩니다.</string>
    <string name="bag_order">주문하기</string>
    <string name="purchase_product_image">상품 이미지</string>
    <string name="purchase_wish_icon">위시리스트 아이콘</string>
    <string name="purchase_tab_all">전체</string>
    <string name="purchase_tab_tops">Tops &amp; T-Shirts</string>
    <string name="purchase_tab_sale">sale</string>
    <string name="purchase_empty_tab_message">아직 준비중인 카테고리입니다.</string>

    <string name="profile_nickname">닉네임</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="profile_order">주문</string>
    <string name="profile_pass">패스</string>
    <string name="profile_event">이벤트</string>
    <string name="profile_setting">설정</string>
    <string name="profile_member_benefit">나이키 멤버 혜택</string>
    <string name="profile_available_count">0개 사용 가능</string>
    <string name="profile_following">팔로잉 (3)</string>
    <string name="profile_edit_text">편집</string>
    <string name="profile_join_date">회원 가입일: 2025년 9월</string>
    <string name="profile_arrow">›</string>

    <string name="profile_order_icon_desc">주문 아이콘</string>
    <string name="profile_pass_icon_desc">패스 아이콘</string>
    <string name="profile_event_icon_desc">이벤트 아이콘</string>
    <string name="profile_setting_icon_desc">설정 아이콘</string>
    <string name="profile_avatar_desc">프로필 아바타</string>
    <string name="profile_name_format">%1$s %2$s</string>
</resources>