<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@id/nav_home"
        android:name="com.umc.workbook.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@id/nav_purchase"
        android:name="com.umc.workbook.ui.purchase.PurchaseFragment"
        android:label="@string/nav_purchase" />

    <fragment
        android:id="@id/nav_wishlist"
        android:name="com.umc.workbook.ui.wish.WishlistFragment"
        android:label="@string/nav_wishlist" />

    <fragment
        android:id="@id/nav_bag"
        android:name="com.umc.workbook.ui.bag.BagFragment"
        android:label="@string/nav_bag" />

    <fragment
        android:id="@id/nav_profile"
        android:name="com.umc.workbook.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>
