<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingTop="24dp">

        <LinearLayout
            android:id="@+id/layout_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchase_tab_all"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_tops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/purchase_tab_tops"
                android:textColor="@color/gray100"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/purchase_tab_sale"
                android:textColor="@color/gray100"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/purchase_tab_nav_host"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:defaultNavHost="false"
            app:navGraph="@navigation/purchase_tab_nav_graph"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_category"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
